<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/providersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/providers_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/networkRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/networkLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_label" />

            <ToggleButton
                android:id="@+id/toggleNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gpsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_label" />

            <ToggleButton
                android:id="@+id/toggleGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lastLocationInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude_label" />

            <EditText
                android:id="@+id/latitudeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/location_hint" />
        </TableRow>
        
                <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/longitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude_label" />

            <EditText
                android:id="@+id/longitudeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/location_hint" >

                <requestFocus />
            </EditText>
        </TableRow>
        
    </TableLayout>

    <Button
        android:id="@+id/useDefaultLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_location_button" />

    <Button
        android:id="@+id/useLastLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_location_button" />

</LinearLayout>